--- a/.github/workflows/katalon-tests.yml
+++ b/.github/workflows/katalon-tests.yml
@@ -21,9 +21,8 @@ jobs:
     - name: Run Katalon Tests
       timeout-minutes: 30
       env:
-        JAVA_OPTS: '-Djava.awt.headless=true -Dorg.eclipse.swt.browser.DefaultType=none -Dkatalon.webview.enabled=false -Dorg.eclipse.swt.browser.chromium.enabled=false -Declipse.e4.inject.javax.disabled=true -Djava.awt.headless=true'
-        KATALON_OPTS: '-noSplash -consoleLog -noExit'
-        DISPLAY: ':0'
+        JAVA_OPTS: '-Djava.awt.headless=true -Dorg.eclipse.swt.browser.DefaultType=none -Dkatalon.webview.enabled=false -Dorg.eclipse.swt.browser.chromium.enabled=false -Declipse.e4.inject.javax.disabled=true'
+        KATALON_OPTS: '-noSplash -consoleLog'
       run: |
         # Đường dẫn Katalon
         $KATALON_HOME = "$env:USERPROFILE\.katalon\packages\KSE-10.4.2"
@@ -110,8 +109,9 @@ jobs:
         Write-Host "=========================================="
         
         # Set environment variables trước khi chạy (đảm bảo headless)
+        # Theo đề xuất: đảm bảo headless mode hoàn toàn
         $env:JAVA_OPTS = '-Djava.awt.headless=true -Dorg.eclipse.swt.browser.DefaultType=none -Dkatalon.webview.enabled=false -Dorg.eclipse.swt.browser.chromium.enabled=false -Declipse.e4.inject.javax.disabled=true'
-        $env:KATALON_OPTS = '-noSplash -consoleLog -noExit'
+        $env:KATALON_OPTS = '-noSplash -consoleLog'
         
         Write-Host "Environment variables set:"
         Write-Host "JAVA_OPTS: $env:JAVA_OPTS"
@@ -119,18 +119,20 @@ jobs:
         Write-Host ""
         
         # Xây dựng lệnh Katalon
-        # Lưu ý: ProcessStartInfo.Arguments cần format đúng, không cần quote nếu dùng array
+        # QUAN TRỌNG: Khi dùng array với @ trong PowerShell, không cần quote trong array
+        # PowerShell sẽ tự động escape spaces khi expand array
+        # Browser type "Chrome (headless)" - không quote trong array, PowerShell sẽ tự xử lý
         $katalonArgs = @(
-          '-runMode=console',
-          '-console',
-          '-noSplash',
-          '-consoleLog',
-          "-projectPath=$projectPath",
-          "-testSuitePath=$testSuitePathFormatted",
-          '-executionProfile=default',
-          '-browserType=Chrome (headless)',
-          "-g_baseUrl=$baseUrl",
-          "-reportFolder=$reportFolder",
+          '-runMode=console'
+          '-console'
+          '-noSplash'
+          '-consoleLog'
+          "-projectPath=$projectPath"
+          "-testSuitePath=$testSuitePathFormatted"
+          '-executionProfile=default'
+          '-browserType=Chrome (headless)'
+          "-g_baseUrl=$baseUrl"
+          "-reportFolder=$reportFolder"
           '-retry=0'
         )
         
@@ -145,22 +147,49 @@ jobs:
           # Chạy Katalon trực tiếp với & operator để dễ debug
           # Điều này sẽ capture output và error tốt hơn
           Write-Host "Launching Katalon process from: $projectPath"
-          Write-Host "Command: $katalonExe $($katalonArgs -join ' ')"
+          Write-Host "Executable: $katalonExe"
+          Write-Host "Arguments: $($katalonArgs -join ' ')"
+          Write-Host ""
+          Write-Host "Starting Katalon execution (headless mode)..."
+          Write-Host "This may take a while on slower machines. Please wait..."
           Write-Host ""
           
-          # Chạy và capture output
-          $output = & $katalonExe @katalonArgs 2>&1
-          $exitCode = $LASTEXITCODE
+          # Chạy và capture output với error handling tốt hơn
+          $ErrorActionPreference = 'Continue'
+          $allOutput = @()
+          $output = @()
+          $errors = @()
           
-          # Hiển thị output
-          if ($output) {
-            $output | ForEach-Object {
-              if ($_ -is [System.Management.Automation.ErrorRecord]) {
-                Write-Host $_.ToString() -ForegroundColor Red
-              } else {
-                Write-Host $_
+          try {
+            # Chạy Katalon và capture cả stdout và stderr
+            # Sử dụng script block để capture output đúng cách
+            $allOutput = & $katalonExe @katalonArgs 2>&1
+            
+            # Phân loại output và errors
+            foreach ($line in $allOutput) {
+              if ($line -is [System.Management.Automation.ErrorRecord]) {
+                $errorStr = $line.ToString()
+                $errors += $errorStr
+                Write-Host $errorStr -ForegroundColor Red
+              } elseif ($null -ne $line) {
+                $output += $line
+                Write-Host $line
               }
             }
+            
+            $exitCode = $LASTEXITCODE
+            
+          } catch {
+            $errorMsg = $_.Exception.Message
+            $errors += $errorMsg
+            Write-Host "ERROR during execution: $errorMsg" -ForegroundColor Red
+            Write-Host "Exception Type: $($_.Exception.GetType().FullName)" -ForegroundColor Red
+            if ($_.Exception.InnerException) {
+              Write-Host "Inner Exception: $($_.Exception.InnerException.Message)" -ForegroundColor Red
+            }
+            Write-Host "Stack Trace:" -ForegroundColor Red
+            Write-Host $_.ScriptStackTrace -ForegroundColor Red
+            $exitCode = 1
           }
           
           # Nếu exit code null, set về 0
@@ -168,10 +197,25 @@ jobs:
             $exitCode = 0
           }
           
+          # Hiển thị errors nếu có
+          if ($errors.Count -gt 0) {
+            Write-Host ""
+            Write-Host "=== ERRORS CAPTURED ===" -ForegroundColor Red
+            $errors | ForEach-Object {
+              Write-Host $_ -ForegroundColor Red
+            }
+          }
+          
         } catch {
+          Write-Host ""
           Write-Host "ERROR: Exception occurred while running Katalon" -ForegroundColor Red
-          Write-Host $_.Exception.Message -ForegroundColor Red
+          Write-Host "Exception Message: $($_.Exception.Message)" -ForegroundColor Red
+          Write-Host "Exception Type: $($_.Exception.GetType().FullName)" -ForegroundColor Red
+          Write-Host "Script Stack Trace:" -ForegroundColor Red
           Write-Host $_.ScriptStackTrace -ForegroundColor Red
+          if ($_.Exception.InnerException) {
+            Write-Host "Inner Exception: $($_.Exception.InnerException.Message)" -ForegroundColor Red
+          }
           $exitCode = 1
         } finally {
           # Quay lại thư mục ban đầu
@@ -182,8 +226,10 @@ jobs:
         $outputLines = @()
         $errorLines = @()
         if ($output) {
-          $outputLines = $output | Where-Object { $_ -isnot [System.Management.Automation.ErrorRecord] }
-          $errorLines = $output | Where-Object { $_ -is [System.Management.Automation.ErrorRecord] }
+          $outputLines = $output | Where-Object { $_ -isnot [System.Management.Automation.ErrorRecord] -and $_ -ne $null }
+        }
+        if ($errors) {
+          $errorLines = $errors
         }
         
         Write-Host ""
