--- a/.github/workflows/katalon-tests.yml
+++ b/.github/workflows/katalon-tests.yml
@@ -162,21 +162,32 @@ jobs:
           try {
             # Chạy trực tiếp để xem output ngay
             Write-Host "[$(Get-Date -Format 'HH:mm:ss')] Executing Katalon directly..." -ForegroundColor Green
-            $allDirectOutput = & $katalonExe @katalonArgs 2>&1
-            $directExitCode = $LASTEXITCODE
+            Write-Host "[$(Get-Date -Format 'HH:mm:ss')] Command: $katalonExe $($katalonArgs -join ' ')" -ForegroundColor Gray
+            Write-Host ""
             
-            # Phân loại output
+            # Capture output
             $script:output = New-Object System.Collections.ArrayList
             $script:errors = New-Object System.Collections.ArrayList
             
-            foreach ($line in $allDirectOutput) {
-              if ($line -is [System.Management.Automation.ErrorRecord]) {
-                $errorStr = $line.ToString()
-                [void]$script:errors.Add($errorStr)
-                Write-Host "[$(Get-Date -Format 'HH:mm:ss')] $errorStr" -ForegroundColor Red
-              } elseif ($null -ne $line) {
-                [void]$script:output.Add($line)
-                Write-Host "[$(Get-Date -Format 'HH:mm:ss')] $line"
+            # Chạy và capture tất cả output (cả stdout và stderr)
+            $ErrorActionPreference = 'Continue'
+            $allDirectOutput = & $katalonExe @katalonArgs 2>&1
+            $directExitCode = $LASTEXITCODE
+            
+            # Phân loại output - xử lý từng dòng
+            if ($allDirectOutput) {
+              foreach ($item in $allDirectOutput) {
+                if ($item -is [System.Management.Automation.ErrorRecord]) {
+                  $errorStr = $item.ToString()
+                  [void]$script:errors.Add($errorStr)
+                  Write-Host "[$(Get-Date -Format 'HH:mm:ss')] ERROR: $errorStr" -ForegroundColor Red
+                } else {
+                  $line = if ($item -is [string]) { $item } else { $item.ToString() }
+                  if ($null -ne $line -and $line.Trim() -ne '') {
+                    [void]$script:output.Add($line)
+                    Write-Host "[$(Get-Date -Format 'HH:mm:ss')] $line"
+                  }
+                }
               }
             }
             
@@ -188,6 +199,13 @@ jobs:
             
             Write-Host ""
             Write-Host "[$(Get-Date -Format 'HH:mm:ss')] Direct execution completed with exit code: $exitCode" -ForegroundColor Green
+            Write-Host "[$(Get-Date -Format 'HH:mm:ss')] Output lines: $($script:output.Count), Error lines: $($script:errors.Count)" -ForegroundColor Gray
+            
+            # Nếu không có output nhưng có exit code lỗi, cảnh báo
+            if ($script:output.Count -eq 0 -and $exitCode -ne 0) {
+              Write-Host "[$(Get-Date -Format 'HH:mm:ss')] WARNING: No output captured but exit code is $exitCode" -ForegroundColor Yellow
+              Write-Host "[$(Get-Date -Format 'HH:mm:ss')] This might indicate Katalon failed to start or output was not captured" -ForegroundColor Yellow
+            }
             
           } catch {
             Write-Host "[$(Get-Date -Format 'HH:mm:ss')] Direct execution exception: $($_.Exception.Message)" -ForegroundColor Yellow
@@ -340,19 +358,53 @@ jobs:
             Write-Host "Exit code: $exitCode"
             Write-Host ""
             
-            # Hiển thị output nếu có
-            if ($script:output.Count -gt 0) {
-              Write-Host "=== KATALON OUTPUT (last 100 lines) ===" -ForegroundColor Cyan
-              $script:output | Select-Object -Last 100 | ForEach-Object {
-                Write-Host $_
-              }
-            } else {
-              Write-Host "WARNING: No output captured from Katalon!" -ForegroundColor Yellow
-              Write-Host "This might indicate:" -ForegroundColor Yellow
-              Write-Host "  1. Process exited too quickly" -ForegroundColor Yellow
-              Write-Host "  2. Output was not redirected properly" -ForegroundColor Yellow
-              Write-Host "  3. Katalon failed to start" -ForegroundColor Yellow
+          # Hiển thị output nếu có
+          if ($script:output.Count -gt 0) {
+            Write-Host "=== KATALON OUTPUT (ALL $($script:output.Count) lines) ===" -ForegroundColor Cyan
+            $script:output | ForEach-Object {
+              Write-Host $_
             }
+          } else {
+            Write-Host "WARNING: No output captured from Katalon!" -ForegroundColor Yellow
+            Write-Host "This might indicate:" -ForegroundColor Yellow
+            Write-Host "  1. Process exited too quickly" -ForegroundColor Yellow
+            Write-Host "  2. Output was not redirected properly" -ForegroundColor Yellow
+            Write-Host "  3. Katalon failed to start" -ForegroundColor Yellow
+            Write-Host ""
+            Write-Host "Attempting to check Katalon logs..." -ForegroundColor Yellow
+            
+            # Kiểm tra log files của Katalon
+            $logPaths = @(
+              "$projectPath\Logs",
+              "$env:USERPROFILE\.katalon\logs",
+              "$KATALON_HOME\configuration\org.eclipse.osgi",
+              "$env:USERPROFILE\.katalon\workspace\.metadata\.log"
+            )
+            
+            foreach ($logPath in $logPaths) {
+              if (Test-Path $logPath) {
+                Write-Host "Checking: $logPath" -ForegroundColor Gray
+                $logFiles = Get-ChildItem -Path $logPath -Recurse -Filter "*.log" -ErrorAction SilentlyContinue | 
+                            Sort-Object LastWriteTime -Descending | 
+                            Select-Object -First 3
+                if ($logFiles) {
+                  Write-Host "Found log files:" -ForegroundColor Green
+                  foreach ($logFile in $logFiles) {
+                    Write-Host "  - $($logFile.FullName) (Modified: $($logFile.LastWriteTime))" -ForegroundColor Green
+                    try {
+                      $logContent = Get-Content $logFile.FullName -Tail 30 -ErrorAction SilentlyContinue
+                      if ($logContent) {
+                        Write-Host "  Last 30 lines:" -ForegroundColor Cyan
+                        $logContent | ForEach-Object { Write-Host "    $_" -ForegroundColor Gray }
+                      }
+                    } catch {
+                      Write-Host "  Could not read log file" -ForegroundColor Yellow
+                    }
+                  }
+                }
+              }
+            }
+          }
             
             if ($script:errors.Count -gt 0) {
               Write-Host ""
